Ticket #2349: adjust panel width to prevent text overflow.

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -2310,6 +2310,10 @@ div[aria-labelledby="ui-dialog-title-dosomething-fb-apps-enter-zip-form"] .ui-di
   padding: 0;
   background: none;
 }
+#slideshow-center #slideshow-center .panel-2col-stacked .panel-col-first,
+#slideshow-center #slideshow-center .panel-2col-stacked .panel-col-last {
+  width: 180px;
+}
 #slideshow-center p {
   margin: 0;
 }
